--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
+    <script>
+      alert("this works");
+    </script>
   </head>
   <body>
     <header>
