--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
-    <script>
-      alert("this works");
-    </script>
+
   </head>
   <body>
     <header>
@@ -32,5 +30,7 @@
       <h2 id="current-calculation">0</h2>
       <h2>Result: <span id="current-result">0</span></h2>
     </section>
+    <script src="/basics-01-starting-project/assets/scripts/app.js"></script>
+    <script src="/basics-01-starting-project/assets/scripts/vendor.js"></script>
   </body>
 </html>
